# qlikview_calendar

./: .gitignore  COVERAGE.md  README.md  TODO.md  calendar.qvs  generate_holidays.py  italy_holidays.csv  pyproject.toml  run_report.cmd
.github/: GITHUB.md
data/: DATA.md
